objects/ASI_FOC_Route_Criteria__c.object
<CustomObject>
    <description>used by FOC</description>
    <fields>
        <fullName>ASI_FOC_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Route_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_POSM_Threshold__c</fullName>
        <label>POSM Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Route_Type__c</fullName>
        <label>Route Type</label>
        <referenceTo>ASI_FOC_Route_Type__c</referenceTo>
        <relationshipLabel>ASI FOC Route Criteria</relationshipLabel>
        <relationshipName>ASI_FOC_Route_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Threshold__c</fullName>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>ASI FOC Route Criteria</label>
    <nameField>
        <displayFormat>FOC-CN-{000000}</displayFormat>
        <label>Criteria Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI FOC Route Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>